# automotive-offline-log-analyzer

./: .gitignore  CMakeLists.txt  README.md
data/: anomaly_rules.json  backend_log.json  can_database.json  can_log.json  dlt_log.json  mqtt_log.json
include/: analyzer_engine.h  anomaly_detector.h  anomaly_report.h  can_database.h  event_mapper.h  log_entries.h  parsers.h  time_synchronizer.h  unified_timeline.h
src/: analyzer_engine.cpp  anomaly_detectors.cpp  anomaly_report.cpp  can_database.cpp  event_mapper.cpp  log_entries.cpp  main.cpp  parsers.cpp  time_synchronizer.cpp  unified_timeline.cpp
